Update BoundingBoxSolvePNPPipe.java